service1-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: services
  template:
    metadata:
      labels:
        app: services
    spec:
      containers:
        - image: atiyah/service1:latest
          imagePullPolicy: IfNotPresent
          name: service1
      restartPolicy: Always
