services-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-login
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-login
  template:
    metadata:
      labels:
        app: service-login
    spec:
      containers:
        - name: service-login
          image: atiyah/service_login:v6  # Utilisation de l'image Spring Boot + PostgreSQL
          ports:
            - containerPort: 8080
    
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service2
  template:
    metadata:
      labels:
        app: service2
    spec:
      containers:
        - name: service2
          image: navdeep00/service2:v2  # Image du service2
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: service-login
spec:
  selector:
    app: service-login
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP  # Accès interne uniquement dans le cluster

---
apiVersion: v1
kind: Service
metadata:
  name: service2
spec:
  selector:
    app: service2
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP  # Accès interne uniquement dans le cluster

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: service-login  # Utilise le même label pour pointer vers le service de base de données
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP  # Accès interne uniquement dans le cluster
