services.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-login
spec:
  selector:
    app: service-login
  ports:
    - protocol: TCP
      port: 80        # Port sur lequel le service sera accessible dans Kubernetes
      targetPort: 8080   # Port sur lequel le container expose l'application
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: service2
spec:
  selector:
    app: service2
  ports:
    - protocol: TCP
      port: 80        # Port sur lequel le service sera accessible dans Kubernetes
      targetPort: 8080   # Port sur lequel le container expose l'application
  type: ClusterIP
