services.yml
# services.yml
# Service1
apiVersion: v1
kind: Service
metadata:
  name: service1
spec:
  ports:
    - nodePort: 30001
      port: 80  # Port de service standard
      protocol: TCP
      targetPort: 8080
  selector:
    app: service1
  type: NodePort
---
# Service2
apiVersion: v1
kind: Service
metadata:
  name: service2
spec:
  ports:
    - nodePort: 30002
      port: 80  # Port de service standard
      protocol: TCP
      targetPort: 8080
  selector:
    app: service2
  type: NodePort
