ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: service-login.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-login
            port:
              number: 80
  - host: service2.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service2
            port:
              number: 80
